--- a/index.html
+++ b/index.html
@@ -119,19 +119,14 @@
     const fases = [
       { pergunta: "QUE HORAS ESTÃO MARCADAS NO RELÓGIO DIGITAL?", texto: "07:15", opcoes: ["06:30", "07:15", "08:45"], correta: "07:15" },
       { pergunta: "QUE HORAS ESTÃO MARCADAS NO RELÓGIO ANALÓGICO?", analogico: "11:30", opcoes: ["11:30", "10:15", "12:00"], correta: "11:30" },
-      { pergunta: "SE A AULA COMEÇA ÀS 8:00 E TERMINA ÀS 9:00, QUANTO TEMPO DURA?", opcoes: ["30 MINUTOS", "1 HORA", "2 HORAS"], correta: "1 HORA" },
-      { pergunta: "O LANCHE COMEÇOU ÀS 9:30 E TERMINOU ÀS 10:00. QUANTO TEMPO DUROU?", opcoes: ["30 MINUTOS", "1 HORA", "15 MINUTOS"], correta: "30 MINUTOS" },
+      { pergunta: "O LANCHE COMEÇOU ÀS 9:38 E TERMINOU ÀS 10:00. QUANTO TEMPO DUROU?", opcoes: ["22 MINUTOS", "1 HORA", "38 MINUTOS"], correta: "22 MINUTOS" },
       { pergunta: "QUE HORAS ESTÃO MARCADAS NO RELÓGIO ANALÓGICO?", analogico: "09:00", opcoes: ["08:00", "09:00", "10:00"], correta: "09:00" },
-      { pergunta: "A PEÇA DE TEATRO COMEÇA ÀS 15:00 E TERMINA ÀS 17:00. QUANTO TEMPO DURA?", opcoes: ["1 HORA", "2 HORAS", "3 HORAS"], correta: "2 HORAS" },
-      { pergunta: "JOÃO COMEÇOU A ESTUDAR ÀS 14:15 E PAROU ÀS 15:15. QUANTO TEMPO ELE ESTUDOU?", opcoes: ["30 MINUTOS", "45 MINUTOS", "1 HORA"], correta: "1 HORA" },
+      { pergunta: "UMA AULA TEM DURAÇÃO DE 50 MINUTOS. SE ELA TERMINOU ÀS 10:10, QUE HORAS COMEÇOU?", opcoes: ["09:10", "09:20", "09:30"], correta: "09:20" },
       { pergunta: "RELÓGIO ANALÓGICO: QUE HORAS SÃO?", analogico: "08:45", opcoes: ["08:30", "08:45", "09:15"], correta: "08:45" },
-      { pergunta: "A ESCOLA ABRE ÀS 07:00 E FECHA ÀS 17:00. QUANTO TEMPO FICA ABERTA?", opcoes: ["9 HORAS", "10 HORAS", "12 HORAS"], correta: "10 HORAS" },
-      { pergunta: "PEDRO FOI AO PARQUINHO DAS 16:00 ÀS 17:30. QUANTO TEMPO ELE FICOU LÁ?", opcoes: ["1 HORA", "1 HORA E MEIA", "2 HORAS"], correta: "1 HORA E MEIA" },
-      { pergunta: "QUAL É A RELAÇÃO ENTRE 1 HORA E MINUTOS?", opcoes: ["30 MINUTOS", "60 MINUTOS", "90 MINUTOS"], correta: "60 MINUTOS" },
-      { pergunta: "O FILME COMEÇOU ÀS 19:00 E TERMINOU ÀS 20:45. QUANTO TEMPO DUROU?", opcoes: ["1H45", "1H30", "2H"], correta: "1H45" },
-      { pergunta: "QUE HORAS ESTÃO MARCADAS NO RELÓGIO ANALÓGICO?", analogico: "10:15", opcoes: ["10:15", "11:15", "09:45"], correta: "10:15" },
-      { pergunta: "SE VOCÊ DORMIR ÀS 21:00 E ACORDAR ÀS 06:00, QUANTAS HORAS DORMIU?", opcoes: ["8 HORAS", "9 HORAS", "7 HORAS"], correta: "9 HORAS" },
-      { pergunta: "RELACIONE: 2 HORAS TEM QUANTOS MINUTOS?", opcoes: ["60", "90", "120"], correta: "120" }
+      { pergunta: "1 HORA CORRESPONDE A QUANTOS MINUTOS?", opcoes: ["30 MINUTOS", "60 MINUTOS", "90 MINUTOS"], correta: "60 MINUTOS" },
+      { pergunta: "UM FILME COMEÇOU ÀS 19:00 E TERMINOU ÀS 20:47. QUANTO TEMPO DUROU?", opcoes: ["1H47", "1H30", "2H"], correta: "1H47" },
+      { pergunta: "SE VOCÊ FOR DORMIR ÀS 21:00 E ACORDAR ÀS 06:00, QUANTAS HORAS DORMIU?", opcoes: ["8 HORAS", "9 HORAS", "7 HORAS"], correta: "9 HORAS" },
+      { pergunta: "2 HORAS E 20 MINUTOS CORRESPONDEM A QUANTOS MINUTOS?", opcoes: ["60", "120", "140"], correta: "140" }
     ];
 
     const jogo = document.getElementById("jogo");
